2018-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-user-alist, tramp-default-host-alist):
	Fix docstring.

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Use `set-process-coding-system' rather than interactive
	`set-buffer-process-coding-system'.

2018-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-errors):
	Add "NT_STATUS_RESOURCE_NAME_NOT_FOUND".

2018-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Check, that method is
	not empty.  (Bug#30038)

2018-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message-show-message): Change default.

	* tramp-adb.el (tramp-adb-handle-write-region):
	* tramp-gvfs.el (tramp-gvfs-handle-write-region):
	* tramp-sh.el (tramp-sh-handle-write-region):
	* tramp-smb.el (tramp-smb-handle-write-region):
	Write proper message.

2017-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-accept-process-output):
	* tramp-adb.el (tramp-adb-handle-start-file-process):
	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-sh-handle-start-file-process):
	* tramp-smb.el (tramp-smb-handle-copy-directory)
	(tramp-smb-handle-file-acl, tramp-smb-handle-process-file)
	(tramp-smb-handle-set-file-acl)
	(tramp-smb-handle-start-file-process): Suppress timers.

2017-12-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-interrupt-process): Fall back to the default
	implementation if there's no success.

2017-12-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.3 released.

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file):
	Fix a bug when renaming.

2017-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-truename): Handle several
	trailing slashes correctly.

	* tramp-compat.el (tramp-compat-file-name-quote): Do not quote
	if it is quoted already.

	* tramp-smb.el (tramp-smb-handle-insert-directory):