@@ -1,3 +1,8 @@
+2018-02-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-find-inline-compress): Improve command
+	quoting for w32.  Reported by Chris Zheng <chriszheng99@gmail.com>.
+
 2018-01-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-default-user-alist, tramp-default-host-alist):
